spacing issue

--- a/css/tooplate-chilling-cafe.css
+++ b/css/tooplate-chilling-cafe.css
@@ -21,7 +21,7 @@ body {
   font-size: 17px;
   font-weight: 400;
   padding: 15px;
-  margin: 0;
+  margin: 0, 25%, 0, 25%;
 }
 
 .tm-container {
